Segundo commit - autocomplementar desactivado.
Se agrega la propiedad con su valor: autocomplete="off" al formulario, para desactivar el autocomplementado de campos, al escribir en ellos.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
 <h1>Reserva de ATMs</h1>
-<form id="registroForm">
+<form id="registroForm" autocomplete="off">
   <label>ID <input type="text" id="nombre" required></label>
   <label>IP <input type="text" id="apellido" required></label>
   <label>MARCA <input type="text" id="marca" required></label>
